# PerfSight

./: .gitignore  AGENTS.md  LICENSE  README.md
database-monitor/: pg_monitor.py
examples/demo_scripts/: quick_start.sh
python-analytics/: CODE_REVIEW.md  main.py  requirements.txt
python-analytics/ai_diagnosis/: analyzer.py  llm_client.py
python-analytics/analyzers/: base_analyzer.py  cpu_analyzer.py  disk_analyzer.py  memory_analyzer.py  network_analyzer.py
python-analytics/config/: settings.py
python-analytics/data_processor/: analyzer.py  cleaner.py  metrics_processor.py  visualizer.py
python-analytics/report_generator/: report_builder.py
python-analytics/templates/: report_template.html
rust-agent/: Cargo.toml  README.md
rust-agent/scripts/: deploy.sh
rust-agent/src/: main.rs
rust-agent/src/collector/: cpu.rs  deep_cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs
rust-agent/src/config/: mod.rs
rust-agent/src/exporter/: mod.rs
