[package]
name = "perfsight-agent"
version = "0.1.0"
edition = "2021"
authors = ["PerfSight Team"]
description = "高性能系统监控代理，用于采集服务器性能指标"
license = "MIT"
repository = "https://github.com/your-org/perfsight"
keywords = ["monitoring", "performance", "metrics", "agent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "perfsight-agent"
path = "src/main.rs"

[dependencies]
# 命令行参数解析
clap = { version = "4.0", features = ["derive"] }
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# CSV 处理
csv = "1.3"
# 系统信息采集
sysinfo = "0.30"
# 网络信息
netstat2 = "0.9"
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 日志
log = "0.4"
env_logger = "0.10"
# 配置文件处理
config = "0.14"
toml = "0.8"
# 文件系统操作
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"